<resources>
    <string name="app_name">VitesseApp</string>
    <string name="profile_pic_descr">Profile picture</string>
    <string name="person_icon">person icon</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="save">Save</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="select_a_date">Select a date</string>
    <string name="expected_salary">Expected salary</string>
    <string name="phone_icon">phone icon</string>
    <string name="email_icon">email icon</string>
    <string name="cake_icon">cake icon</string>
    <string name="dollar_icon">dollar icon</string>
    <string name="pen_icon">pen icon</string>
    <string name="note">Note</string>
    <string name="add_candidate">Add a candidate</string>
    <string name="mandatory_field">Mandatory field</string>
    <string name="invalid_format">Invalid format</string>
    <string name="all">All</string>
    <string name="favorites">Favorites</string>
    <string name="plus_icon">plus_icon</string>
    <string name="no_candidates">No candidates</string>
    <string name="search">Search</string>
    <string name="gallery_icon">gallery icon</string>
    <string name="call">Call</string>
    <string name="e_mail">E-mail</string>
    <string name="sms">SMS</string>
    <string name="about">About</string>
    <string name="birthday">Birthday</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="notes">Notes</string>
    <string name="birthdate_age">%1$s (%2$d years old)</string>
    <string name="salary_eur">%1$s €</string>
    <string name="salary_gbp">or £ %1$s</string>
    <string name="not_available">Not available</string>
    <string name="dial_impossible">Impossible to dial phone</string>
    <string name="sms_impossible">Impossible to send SMS</string>
    <string name="email_impossible">Impossible to send E-mail</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="deletion">Deletion</string>
    <string name="deletion_message">Are you sure you want to delete this candidate? This action cannot be undone.</string>
    <string name="error_loading_candidate">Error loading candidate</string>
    <string name="no_candidate">No candidate found</string>
    <string name="error">An error occurred</string>
    <string name="modify_candidate">Edit a candidate</string>
    <string name="edit">Edit</string>
</resources>