<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/star_icon"
        android:icon="@drawable/outline_star_24"
        app:showAsAction="always"
        app:iconTint="?attr/colorOnSurfaceVariant"
        android:orderInCategory="1"
        android:title="@string/favorites" />
    <item
        android:id="@+id/edit_icon"
        android:icon="@drawable/pen_24dp_000000"
        app:showAsAction="always"
        app:iconTint="?attr/colorOnSurfaceVariant"
        android:orderInCategory="2"
        android:title="@string/modify" />
    <item
        android:id="@+id/trash_icon"
        android:icon="@drawable/outline_delete_24"
        app:showAsAction="ifRoom"
        app:iconTint="?attr/colorOnSurfaceVariant"
        android:orderInCategory="3"
        android:title="@string/delete" />
</menu>


    <!--        android:onClick="onClickMethodName"-->