<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/form_scrollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_profile_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"
            android:layout_height="195dp"
            android:background="?attr/colorSurfaceVariant"
            android:contentDescription="@string/profile_pic_descr"
            android:scaleType="centerInside"
            android:src="@drawable/photo_library_72dp" />

        <ImageView
            android:id="@+id/person_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tip_firstname"
            app:tint="?attr/colorOnSurfaceVariant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/person_icon"
            android:paddingStart="0dp"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            android:src="@drawable/person_24dp_000000" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tip_firstname"
            style="@style/VitesseTextInputLayout"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/person_icon"
            app:layout_constraintTop_toBottomOf="@id/iv_profile_photo"
            android:layout_width="0dp"
            android:layout_height="89dp"
            android:layout_marginTop="12dp"
            android:hint="@string/firstname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_firstname"
                style="@style/VitesseTextInputEditText"
                app:lineHeight="24dp"
                tools:text="John"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tip_lastname"
            style="@style/VitesseTextInputLayout"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/person_icon"
            app:layout_constraintTop_toBottomOf="@id/tip_firstname"
            android:layout_width="0dp"
            android:layout_height="89dp"
            android:layout_marginTop="12dp"
            android:hint="@string/lastname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_lastname"
                style="@style/VitesseTextInputEditText"
                app:lineHeight="24dp"
                tools:text="Doe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/phone_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tip_phone"
            app:tint="?attr/colorOnSurfaceVariant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/phone_icon"
            android:paddingStart="0dp"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            android:src="@drawable/call_24dp_000000" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tip_phone"
            style="@style/VitesseTextInputLayout"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/phone_icon"
            app:layout_constraintTop_toBottomOf="@id/tip_lastname"
            android:layout_width="0dp"
            android:layout_height="89dp"
            android:layout_marginTop="12dp"
            android:hint="@string/phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_phone"
                style="@style/VitesseTextInputEditText"
                app:lineHeight="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/email_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tip_email"
            app:tint="?attr/colorOnSurfaceVariant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/email_icon"
            android:paddingStart="0dp"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            android:src="@drawable/mail_24dp_000000" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tip_email"
            style="@style/VitesseTextInputLayout"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/email_icon"
            app:layout_constraintTop_toBottomOf="@id/tip_phone"
            android:layout_width="0dp"
            android:layout_height="89dp"
            android:layout_marginTop="12dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_email"
                style="@style/VitesseTextInputEditText"
                app:lineHeight="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/cake_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tip_birthdate"
            app:tint="?attr/colorOnSurfaceVariant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cake_icon"
            android:paddingStart="0dp"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            android:src="@drawable/cake_24dp_000000" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tip_birthdate"
            style="@style/VitesseTextInputLayout"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cake_icon"
            app:layout_constraintTop_toBottomOf="@id/tip_email"
            android:layout_width="0dp"
            android:layout_height="89dp"
            android:layout_marginTop="12dp"
            android:hint="@string/select_a_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_birthdate"
                style="@style/VitesseTextInputEditText"
                app:lineHeight="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/money_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tip_salary"
            app:tint="?attr/colorOnSurfaceVariant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dollar_icon"
            android:paddingStart="0dp"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            android:src="@drawable/attach_money_24dp_000000" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tip_salary"
            style="@style/VitesseTextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/money_icon"
            app:layout_constraintTop_toBottomOf="@id/tip_birthdate"
            android:layout_width="0dp"
            android:layout_height="89dp"
            android:layout_marginTop="12dp"
            android:hint="@string/expected_salary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_salary"
                style="@style/VitesseTextInputEditText"
                app:lineHeight="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/edit_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tip_notes"
            app:tint="?attr/colorOnSurfaceVariant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pen_icon"
            android:paddingStart="0dp"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            android:src="@drawable/pen_24dp_000000" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tip_notes"
            style="@style/VitesseTextInputLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/edit_icon"
            app:layout_constraintTop_toBottomOf="@id/tip_salary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="100dp"
            android:hint="@string/notes">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_notes"
                style="@style/VitesseTextInputEditText"
                app:lineHeight="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="10" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>