<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/VitesseToolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_left_alt_24dp_000000"
        app:tint="?attr/colorOnSurfaceVariant"
        app:title="@string/modify_candidate" />

    <include
        layout="@layout/candidate_form"
        android:id="@+id/include_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"/>

    <ProgressBar
        android:id="@+id/bar_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/roboto_medium"
        android:textSize="18sp"
        android:text="@string/error"
        android:visibility="gone"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/tv_no_candidate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/roboto_medium"
        android:textSize="18sp"
        android:text="@string/no_candidate"
        android:visibility="gone"
        tools:visibility="visible"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        style="@style/VitesseButton"
        android:layout_width="364dp"
        android:layout_height="40dp"
        app:lineHeight="20dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.950" />

</androidx.constraintlayout.widget.ConstraintLayout>